add dashboard-download-documents-grid-table and fix inputs

--- a/src/assets/styles/blocks.scss
+++ b/src/assets/styles/blocks.scss
@@ -63,6 +63,11 @@
   height: 112px;
 }
 
+.block-w608-h96 {
+  width: 608px;
+  height: 96px;
+}
+
 .block-w608-h178 {
   width: 608px;
   height: 172px;
