--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -70,6 +70,12 @@
   height: 12px;
 }
 
+.document-text-icon-40 {
+  background: url("/assets/svg/document-text-icon-40.svg");
+  width: 40px;
+  height: 40px;
+}
+
 .edit-icon-20 {
   background: url("/assets/svg/edit-icon.svg");
   width: 20px;
@@ -118,7 +124,7 @@
   width: 24px;
 }
 
-.search-icon-24 {
+.search-icon-20 {
   background: url("/assets/svg/search-normal-icon.svg");
   width: 20px;
   height: 20px;
@@ -222,6 +228,12 @@
 
 .info-base-icon-24 {
   background: url("/assets/svg/info-base-icon.svg");
+  width: 24px;
+  height: 24px;
+}
+
+.info-circle-icon-24 {
+  background: url("/assets/svg/info-circle-icon.svg");
   width: 24px;
   height: 24px;
 }
