--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -107,6 +107,7 @@ tui-input-inline {
   font-style: normal!important;
   font-weight: 400!important;
   line-height: 24px!important;
+  padding-right: 16px!important;
 
   .t-placeholder {
     display: flex !important;
