--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -213,6 +213,10 @@
   margin-right: 24px;
 }
 
+.mr-7-5 {
+  margin-right: 30px;
+}
+
 .mr-8 {
   margin-right: 32px;
 }
@@ -321,6 +325,10 @@
 
 .margin-start-25 {
   margin-inline-start: 100px;
+}
+
+.margin-end-4 {
+  margin-inline-end: 16px;
 }
 
 /* margin-left*/
