--- a/src/shared/layout/dashboard-layout/dashboard-balance/dashboard-balance.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-balance/dashboard-balance.component.html
@@ -37,7 +37,7 @@
           </div>
         </ng-template>
       </smarti-custom-dropdown>
-      <div class="self-end">
+      <div class="self-end pr-6">
         <smarti-input-search
           [placeholder]="'Search employee'"
           [customWidth]="'450px'"
