--- a/src/shared/layout/dashboard-layout/dashboard-employer/dashboard-employer.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-employer/dashboard-employer.component.html
@@ -1,6 +1,9 @@
 <div>
   <div class="flex flex-row justify-end mt-12">
-    <h2 class="medium neutrals-text-950 mt-0 mb-0 pr-6">היזונים ברמת עובד</h2>
+    <div>
+      <h2 class="medium neutrals-text-950 mt-0 mb-0 pr-6">היזונים ברמת עובד</h2>
+      <div class="neutrals-text-950 paragraph-text pr-6">צפיה בסטטוס הכספים ששוייכו לקופה של העובד</div>
+    </div>
   </div>
   <div class="flex flex-row justify-between mt-4">
     <div>
@@ -31,7 +34,7 @@
           </div>
         </ng-template>
       </smarti-custom-dropdown>
-      <div class="self-end">
+      <div class="self-end pr-6">
         <smarti-input-search
           [placeholder]="'Search'"
           [customWidth]="'450px'"
