--- a/src/shared/layout/dashboard-layout/dashboard-notification/dashboard-notification-item/dashboard-notification-item.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-notification/dashboard-notification-item/dashboard-notification-item.component.html
@@ -22,7 +22,7 @@
       [text]="'Download file'"
       [typeClass]="'confirm'"
       [buttonTextSmall]="true"
-      [hasFileIcon]="true"
+      [hasFileIconRight]="true"
       (buttonClicked)="downloadFile()"
     ></smarti-button>
   </div>
