--- a/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
@@ -41,7 +41,7 @@
           </div>
         </ng-template>
       </smarti-custom-dropdown>
-      <div class="self-end">
+      <div class="self-end pr-6">
         <smarti-input-search
           [placeholder]="'Search'"
           [customWidth]="'450px'"
