--- a/src/shared/ui/input-search/input-search.component.html
+++ b/src/shared/ui/input-search/input-search.component.html
@@ -9,5 +9,5 @@
   [(ngModel)]="search"
 >
   {{ placeholder }}
-  <div class="search-icon"></div>
+  <div class="search-icon-20"></div>
 </tui-input-inline>
