--- a/src/shared/layout/dashboard-layout/dashboard-cash-register/dashboard-cash-register.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-cash-register/dashboard-cash-register.component.html
@@ -22,7 +22,7 @@
           </div>
         </ng-template>
       </smarti-custom-dropdown>
-      <div class="self-end">
+      <div class="self-end pr-6">
         <smarti-input-search
           [placeholder]="'Search employee'"
           [customWidth]="'450px'"
