--- a/src/shared/tables/dashboard-process-table/dashboard-process-table.component.html
+++ b/src/shared/tables/dashboard-process-table/dashboard-process-table.component.html
@@ -2,110 +2,112 @@
   <div class="mt-10 ml-7-5 mr-10 inline-block flex-1">
     <table class="tui-table tui-table_layout_fixed process-table">
       <tbody>
-      <tr class="tui-table__tr tui-table__tr_border_none bg-neutrals-20 mb-6">
-        <th
-          class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-4 w-36"
-          colspan="2"
+        <tr class="tui-table__tr tui-table__tr_border_none bg-neutrals-20 mb-6">
+          <th
+            class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-4 w-36"
+            colspan="2"
+          >
+            פעולות
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-4 w-36">הערות</th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>סטטוס תהליך</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>סכום</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>חודש שכר</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>מנהל תיק</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>שם מחלקה</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>שם מעסיק</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>שם תהליך</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>תאריך שידור</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
+            <div class="flex flex-row cursor-pointer justify-around">
+              <div class="arrow-down-icon-16"></div>
+              <div>תאריך טעינה</div>
+            </div>
+          </th>
+          <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-2 w-9">
+            <smarti-input-checkbox
+              [checked]="isSelectedAll"
+              (changeEvent)="checkAll($event)"
+            ></smarti-input-checkbox>
+          </th>
+        </tr>
+        <tr
+          *ngFor="let _ of ' '.repeat(6).split(''); let index = index"
+          class="tui-table__tr tui-table__tr_border_none mb-6 cursor-pointer"
+          (click)="openDetailInformation()"
         >
-          פעולות
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-4 w-36">הערות</th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>סטטוס תהליך</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>סכום</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>חודש שכר</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>מנהל תיק</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>שם מחלקה</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>שם מעסיק</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>שם תהליך</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>תאריך שידור</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-0 w-36">
-          <div class="flex flex-row cursor-pointer justify-around">
-            <div class="arrow-down-icon-16"></div>
-            <div>תאריך טעינה</div>
-          </div>
-        </th>
-        <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-2 w-9">
-          <smarti-input-checkbox
-            [checked]="isSelectedAll"
-            (changeEvent)="checkAll($event)"
-          ></smarti-input-checkbox>
-        </th>
-      </tr>
-      <tr
-        *ngFor="let _ of ' '.repeat(6).split(''); let index = index"
-        class="tui-table__tr tui-table__tr_border_none mb-6 cursor-pointer"
-        (click)="openDetailInformation()"
-      >
-        <td class="tui-table__td h-10 p-2 px-0">
-          <div class="trash-icon-24 cursor-pointer margin-rl-auto"></div>
-        </td>
-        <td class="tui-table__td h-10 p-2 px-0">
-          <div class="direct-inbox-icon-24 cursor-pointer margin-rl-auto"></div>
-        </td>
-        <td class="tui-table__td h-10 p-2 px-0">
-          <div class="message-notify-icon-24 cursor-pointer margin-rl-auto"></div>
-        </td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">5-5 חלקי</td>
-        <td class="tui-table__td text-center paragraph-text bold-text neutrals-text-500 h-10 p-2 px-0">196,434.81</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">04-2023</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">סזי מזרחי</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">כללי</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">הילוך שישי יפו בע”מ...</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
-          <b>2023</b>
-          <span>אפריל</span>
-        </td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">18-05-2023</td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
-          <div class="flex flex-row gap-4">
-            <div>10-05-2023</div>
-            <div class="briefcase-icon-16"></div>
-          </div>
-        </td>
-        <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 w-9 px-2">
-          <smarti-input-checkbox (changeEvent)="checkRow($event, index)"></smarti-input-checkbox>
-        </td>
-      </tr>
+          <td class="tui-table__td h-10 p-2 px-0">
+            <div class="trash-icon-24 cursor-pointer margin-rl-auto"></div>
+          </td>
+          <td class="tui-table__td h-10 p-2 px-0">
+            <div class="direct-inbox-icon-24 cursor-pointer margin-rl-auto"></div>
+          </td>
+          <td class="tui-table__td h-10 p-2 px-0">
+            <div class="message-notify-icon-24 cursor-pointer margin-rl-auto"></div>
+          </td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">5-5 חלקי</td>
+          <td class="tui-table__td text-center paragraph-text bold-text neutrals-text-500 h-10 p-2 px-0">196,434.81</td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">04-2023</td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">סזי מזרחי</td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">כללי</td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
+            הילוך שישי יפו בע”מ...
+          </td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
+            <b>2023</b>
+            <span>אפריל</span>
+          </td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">18-05-2023</td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
+            <div class="flex flex-row gap-4">
+              <div>10-05-2023</div>
+              <div class="briefcase-icon-16"></div>
+            </div>
+          </td>
+          <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 w-9 px-2">
+            <smarti-input-checkbox (changeEvent)="checkRow($event, index)"></smarti-input-checkbox>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
