--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -26,9 +26,13 @@
       *ngIf="hasArrowDownIconFromLeft"
       class="arrow-down-icon-20 mr-2"
     ></div>
+    <div
+      *ngIf="hasFileIconLeft"
+      class="document-download-small-icon-12 mr-1"
+    ></div>
     {{ text }}
     <div
-      *ngIf="hasFileIcon"
+      *ngIf="hasFileIconRight"
       class="document-download-small-icon-12 ml-1"
     ></div>
     <div
