--- a/src/shared/layout/dashboard-layout/dashboard-header/dashboard-header.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-header/dashboard-header.component.html
@@ -4,7 +4,10 @@
   </div>
   <div class="flex flex-row justify-between rounded-xls bg-neutrals-950 box-shadow-big w-full h-18">
     <div class="group-block self-center box-shadow-regular m-2 bg-white">
-      <smarti-custom-group-select></smarti-custom-group-select>
+      <smarti-custom-group-select
+        [customWidth]="'252px'"
+        [textFieldSize]="'s'"
+      ></smarti-custom-group-select>
     </div>
     <div class="logo-big-h33 self-center mr-8"></div>
   </div>
