update api and add some get api changes on dashboards

--- a/src/shared/tables/dashboard-home-table/dashboard-home-table.component.html
+++ b/src/shared/tables/dashboard-home-table/dashboard-home-table.component.html
@@ -42,7 +42,7 @@
             {{ getMonthsFromDate(compensation.created_at) }}
           </td>
           <td class="tui-table__td text-right paragraph-text neutrals-text-500 h-10 p-2">
-            {{ compensation.employee_first_name + ' ' + compensation.employee_last_name }}
+            {{ compensation.employee_first_name + " " + compensation.employee_last_name }}
           </td>
           <td class="tui-table__td text-right paragraph-text neutrals-text-500 h-10 p-2">
             {{ compensation.created_at }}
