--- a/src/shared/tables/dashboard-process-table/dashboard-process-table.component.html
+++ b/src/shared/tables/dashboard-process-table/dashboard-process-table.component.html
@@ -95,7 +95,7 @@
             {{ item.total }}
           </td>
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
-            {{ item.transmit_date ?? '--' }}
+            {{ item.transmit_date ?? "--" }}
           </td>
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 px-0">
             {{ item.operator_name }}
