update api and add some get api changes on file, loader and dashboards

--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -64,6 +64,10 @@ tui-files {
   }
 }
 
+tui-files section.t-files {
+  overflow: initial!important;
+}
+
 tui-checkbox {
   width: 20px!important;
   height: 20px!important;
