--- a/src/shared/ui/input-file/input-file.component.scss
+++ b/src/shared/ui/input-file/input-file.component.scss
@@ -20,3 +20,8 @@
   position: absolute;
   right: 28px;
 }
+
+.loading-file-block {
+  border: 1px dashed #02CAB3!important;
+  border-radius: 16px!important;
+}
