--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
@@ -20,33 +20,48 @@
         <h3 class="neutrals-text-950 mt-0 mb-0 text-right">Good Morning</h3>
         <h3 class="medium mt-2 neutrals-text-950 mt-0 mb-0 text-right">User Name</h3>
         <h4 class="bg-white mt-8 mb-0 py-1 px-2 rounded-ls bright-turquoise-text-500 w-fit-content">
-          Wed 24 Jun, 2023
+          {{ getDayOfWeekAndCurrentDayDate() }}
         </h4>
       </div>
     </div>
-    <div>
-      <smarti-last-payment></smarti-last-payment>
+    <div *ngIf="$employerReport | async as employerReport; else loadingTemplate">
+      <smarti-last-payment [lastPayment]="employerReport.reportsData?.processes"></smarti-last-payment>
       <div class="dashboard-info-grid grid mt-6 gap-6 bg-white">
         <div class="dashboard-info-grid__main box-shadow-big rounded-l">
           <smarti-inquiries [chats]="chats$ | async"></smarti-inquiries>
         </div>
         <div class="dashboard-info-grid__left box-shadow-big rounded-l">
-          <smarti-feeds [employerReport]="employerReport | async"></smarti-feeds>
+          <smarti-feeds
+            [repeatedOnLevel]="employerReport.reportsData?.files"
+            [inProcess]="employerReport.reportsData?.files_loading"
+            [provided]="employerReport.reportsData?.files_transmitted"
+          ></smarti-feeds>
         </div>
         <div class="dashboard-info-grid__right box-shadow-big rounded-l">
-          <smarti-balance-for-compensation></smarti-balance-for-compensation>
+          <smarti-balance-for-compensation
+            [openCompensations]="employerReport.reportsData?.compensation_open"
+            [closedCompensations]="employerReport.reportsData?.compensation_close"
+          ></smarti-balance-for-compensation>
         </div>
         <div class="dashboard-info-grid__footer box-shadow-big rounded-l">
-          <smarti-dashboard-home-small-table></smarti-dashboard-home-small-table>
+          <smarti-dashboard-home-small-table
+            [compensationReport]="compensationReport$ | async"
+          ></smarti-dashboard-home-small-table>
         </div>
       </div>
       <smarti-dashboard-home-table
-        [compensationReport]="compensationReport$ | async"
+        [feedbackEmployerReport]="feedbackEmployerReport$ | async"
         (changeMonth)="onChangeMonth($event)"
         (changeYear)="onChangeYear($event)"
       ></smarti-dashboard-home-table>
     </div>
   </div>
 </div>
-
 <div class="white-background-absolute-block"></div>
+
+<ng-template #loadingTemplate>
+  <smarti-loader
+    [size]="'xxl'"
+    [paddingTop30percent]="true"
+  ></smarti-loader>
+</ng-template>
