--- a/src/shared/layout/dashboard-layout/dashboard-home/last-payment/last-payment.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-home/last-payment/last-payment.component.html
@@ -17,17 +17,18 @@
   <div class="bg-neutrals-950 rounded-l">
     <div class="last-payment-grid__image"></div>
     <h3 class="medium white-text text-right mt-4 mb-0 mr-6 ml-auto">תשלום אחרון</h3>
-    <div class="flex flex-row justify-between ml-150 mt-5 mr-6 gap-8">
+    <div
+      class="flex flex-row justify-between ml-150 mt-5 mr-6 gap-8"
+      *ngFor="let payment of lastPayment"
+    >
       <div class="success-notification-icon-24"></div>
-      <div class="medium-text white-text dir-rtl">34.569,89</div>
-      <div class="neutrals-text-100 regular-text dir-rtl">09-2022</div>
-      <div class="pumpkin-text-400 regular-text dir-rtl">ספטמבר 2022</div>
-    </div>
-    <div class="flex flex-row justify-between ml-150 mt-8 mr-6 gap-8">
-      <div class="success-notification-icon-24"></div>
-      <div class="medium-text white-text dir-rtl">32.227,54</div>
-      <div class="neutrals-text-100 regular-text dir-rtl">09-2022</div>
-      <div class="pumpkin-text-400 regular-text dir-rtl">ספטמבר 2022</div>
+      <div class="medium-text white-text dir-rtl">{{ payment.total }}</div>
+      <div class="neutrals-text-100 regular-text dir-rtl">
+        {{ getMonthAndDateFromStringDate("yyyy-mm-dd", payment.date) }}
+      </div>
+      <div class="pumpkin-text-400 regular-text">
+        {{ getYearFromStringDate("yyyy-mm-dd", payment.date) + " " + mainText }}
+      </div>
     </div>
   </div>
 </div>
