--- a/src/shared/tables/dashboard-home-table/dashboard-home-table.component.html
+++ b/src/shared/tables/dashboard-home-table/dashboard-home-table.component.html
@@ -31,21 +31,21 @@
           <th class="tui-table__th text-right caption-text neutrals-text-500">שם התהליך</th>
         </tr>
         <tr
-          *ngFor="let compensation of compensationReport?.reportsCompensation"
+          *ngFor="let compensation of feedbackEmployerReport?.reportsFeedback"
           class="tui-table__tr tui-table__tr_border_none mb-1"
         >
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2">—</td>
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2">
-            {{ compensation.product_type }}
+            {{ compensation }}
           </td>
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2">
-            {{ getMonthsFromDate(compensation.created_at) }}
+            {{ getMonthsFromDate(compensation) }}
           </td>
           <td class="tui-table__td text-right paragraph-text neutrals-text-500 h-10 p-2">
-            {{ compensation.employee_first_name + " " + compensation.employee_last_name }}
+            {{ compensation + " " + compensation }}
           </td>
           <td class="tui-table__td text-right paragraph-text neutrals-text-500 h-10 p-2">
-            {{ compensation.created_at }}
+            {{ compensation }}
           </td>
         </tr>
       </tbody>
